--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="az">
 <head>
@@ -10,7 +9,7 @@
 <body>
     <div class="container">
         <h1>Siyasi Pusula Testi</h1>
-        <div id="question-container"></div>
+        <div id="question-container">Suallar yüklənir...</div>
         <div id="options-container"></div>
         <button id="next-btn">Növbəti</button>
         <div id="result" style="display:none;">
