--- a/index.html
+++ b/index.html
@@ -53,6 +53,11 @@
                 </button>
             </div>
         </div>
+
+        <footer>
+            <p>© 2023 Siyasi Pusula Testi | <a href="#" id="privacy-link">Məxfilik Siyasəti</a></p>
+            <p class="credit">by <a href="https://github.com/zectted" target="_blank" rel="noopener noreferrer">zectted</a></p>
+        </footer>
     </div>
 
     <script src="script.js"></script>
